--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,13 @@
+<h1>Battle!</h1>
+<h2>Sign in to play</h2>
 <form action='/names' method='post'>
-  <input type="text" name="name1" id="Player 1">
-  <input type="text" name="name2" id="Player 2">
+  <label for="player_name_1">
+    Player 1 Name
+    <input type="text" name="player_name_1" id="Player 1">
+  </label>
+  <label for="player_name_2">
+    Player 2 Name
+    <input type="text" name="player_name_2" id="Player 2">
+  </label>
   <input type="submit" value="Submit">
 </form>
