--- a/views/play.erb
+++ b/views/play.erb
@@ -2,4 +2,7 @@
 <h1><%= @player_name_1 %> vs. <%= @player_name_2 %></h1>
 
 <h1><%= @player_name_2 %>'s HP: 60</h1>
+<form action='/attack'>
+<input type="submit" value="Attack">
+</form>
 </html>
