--- a/views/play.erb
+++ b/views/play.erb
@@ -2,7 +2,7 @@
 <h1><%= @player_name_1 %> vs. <%= @player_name_2 %></h1>
 
 <h1><%= @player_name_2 %>'s HP: 60</h1>
-<form action='/attack'>
+<form action='/attacking' method='/post'>
 <input type="submit" value="Attack">
 </form>
 </html>
