--- a/views/play.erb
+++ b/views/play.erb
@@ -1,8 +1,8 @@
 <html>
 <h1><%= @player_name_1 %> vs. <%= @player_name_2 %></h1>
 
-<h1><%= @player_name_2 %>'s HP: 60</h1>
-<form action='/attacking' method='/post'>
+<h1><%= @player_name_2 %>'s HP: <%= @player_2_hp %></h1>
+<form action='/attacking' method='post'>
 <input type="submit" value="Attack">
 </form>
 </html>
