--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,5 +1,5 @@
 <html>
-<%=@player_name_1%> attacked <%=@player_name_2%>
+<%=@game.player_1.name%> attacked <%=@game.player_2.name%>
 
-<h1><%= @player_name_2 %>'s HP: <%= @player_2_hp %></h1>
+<h1><%= @game.player_2.name %>'s HP: <%= @game.player_2.hp %></h1>
 </html>
