--- a/views/play.erb
+++ b/views/play.erb
@@ -1,7 +1,7 @@
 <html>
-<h1><%= @player_name_1 %> vs. <%= @player_name_2 %></h1>
+<h1><%= @game.player_1.name %> vs. <%= @game.player_2.name %></h1>
 
-<h1><%= @player_name_2 %>'s HP: <%= @player_2_hp %></h1>
+<h1><%= @game.player_2.name %>'s HP: <%= @game.player_2.hp %></h1>
 <form action='/attacking' method='post'>
 <input type="submit" value="Attack">
 </form>
